--- a/index.html
+++ b/index.html
@@ -3,21 +3,36 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Psychic Game</title>
+	<link rel="stylesheet" href="assets/css/reset.css">
+	
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 <div class=wrapper>
-	<h1>Psychic Game</h1>
+	<img src="assets/images/psychic-myths.jpg" alt="Psychic The Game">
+	
+	<br>
+	<br>
 
-	<p>Guess what letter I'm thinking of</p>
+	<h1>Guess what letter I'm thinking of...</h1>
+	
+	<br>
 
-	<p id="wins">Wins :</p>
+	<h3 id="wins">Wins :</h3>
 
-	<p id="losses">Losses :</p>
+	<br>
 
-	<p id="guessesLeft">Guesses Left :</p>
+	<h3 id="losses">Losses :</h3>
 
-	<p id="entry"> Your guesses so far: </p>
+	<br>
+
+	<h3 id="guessesLeft">Guesses Left :</h3>
+
+	<br>
+
+	<h3 id="entry"> Your guesses so far: </h3>
+
+
 </div>
 
 <script src="assets/javascript/game.js"></script>
